# Blocks-and-Bombs

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README  TODO  aboutdata.hh  bbengine.cc  bbengine.hh  config.h.in  effects.cc  effects.hh  except.cc  except.hh  helpstate.cc  helpstate.hh  highscorestate.cc  highscorestate.hh  main.cc  menustate.cc  menustate.hh  options.cc  options.hh  playstate.cc  playstate.hh  resources.cc  resources.hh  states.hh  textdisplaystate.cc  textdisplaystate.hh  textwriter.cc  textwriter.hh  util.cc  util.hh
resources/: blue-animation.res  cyan-animation.res  green-animation.res  level-0001.res  menu-background.xcf  purple-animation.res  red-animation.res  wall-animation.res  yellow-animation.res
resources/animations/: blue-animation.res  cyan-animation.res  green-animation.res  purple-animation.res  red-animation.res  wall-animation.res  yellow-animation.res
resources/levels/: level-0001.res
